fixed a bug where it media queries don't work on mobile devices

--- a/visual-git-guide.css
+++ b/visual-git-guide.css
@@ -12,7 +12,7 @@ body{
     color: rgba(0,0,0,0.7);
 }
 
-@media screen and (max-width: 900px){
+@media handheld, screen and (max-width: 995px){
     body{
         width: 100%;
     }
